--- a/ModelViewControllerDemo/Views/Shared/_Layout.cshtml
+++ b/ModelViewControllerDemo/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Vendor" asp-action="Index">Vendors</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Products</a>
+                        </li>
                     </ul>
                 </div>
             </div>
